Add virtual thread support, fix Python 3.12 escape sequences, bump to 1.11.2
- Add optional virtual thread support for Invoker, Jobs, and Mail subsystems
  (configured via play.virtualThreads.* properties, requires Java 21+)
- Fix Python CLI SyntaxWarning on 3.12+ by using raw strings for regex patterns
- Bump version from 1.11.x to 1.11.2
- Add CLAUDE.md, OpenSpec workflow artifacts, and project tooling

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>